# imagined-world-simulation-cpp

./: CMakeLists.txt  main.cpp
abstract/: Animal.h  CyberSheep.h  Dandelion.h  Fox.h  Grass.h  Guarana.h  Human.h  Organism.h  Plant.h  Sheep.h  Turtle.h  Wolf.h  World.h
abstract/organisms/: Organism.h
abstract/organisms/animals/: Animal.h  Antelope.h
abstract/organisms/plants/: Belladonna.h  Plant.h  SosnowskyHogweed.h
impl/: Antelope.cpp  Belladonna.cpp  CyberSheep.cpp  Dandelion.cpp  Fox.cpp  Grass.cpp  Guarana.cpp  Human.cpp  Organism.cpp  Plant.cpp  Sheep.cpp  SosnowskyHogweed.cpp  Turtle.cpp  Wolf.cpp  World.cpp
impl/organisms/animals/: Animal.cpp  Antelope.cpp  CyberSheep.cpp  Fox.cpp  Human.cpp  Sheep.cpp  Turtle.cpp  Wolf.cpp
impl/organisms/plants/: Belladonna.cpp  Dandelion.cpp  Grass.cpp  Guarana.cpp  Plant.cpp  SosnowskyHogweed.cpp
